--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Student"></activity>
+        <activity android:name=".Progress"></activity>
+        <activity android:name=".SplashActivity2" />
+        <activity android:name=".Student" />
         <activity android:name=".courseActivity" />
         <activity android:name=".Registration" />
         <activity android:name=".MainActivity">
